--- a/templates/results.html
+++ b/templates/results.html
@@ -20,6 +20,15 @@
     <!-- Custom CSS -->
     <link href="../static/css/freelancer.css" rel="stylesheet">
 
+    <!-- Products list -->
+        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../static/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../static/css/price-range.css" rel="stylesheet">
+    <link href="../static/css/animate.css" rel="stylesheet">
+	<link href="../static/css/main.css" rel="stylesheet">
+	<link href="../static/css/responsive.css" rel="stylesheet">
+	
     <!-- Custom Fonts -->
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -151,33 +160,7 @@ body {margin:0;}
 					
 <h5>We found these items for you : </h5>
 
-               <center><div id="load"></div></center>
-<div id="contents">
-
-
-
-
-
-  <table id="results" cellspacing="0" width="100%" class="ui celled table">
-
-<!--
- <button type="button" class="btn btn-success" data-toggle="popover" title="Dinero Filters: "  data-placement="bottom" data-content="Ebay , AliExpress , Amazon , DealExtreme" >Filtering</button>
--->
-
-      <tbody>
-      	<!--
-      <td>
-          <center><form action="http://dinero-web.herokuapp.com/results/filtering">
-  <input class="img-thumbnail" type="image" src="../static/img/ebay.png" alt="Submit" id="ebay">
-          <input class="img-thumbnail" type="image" src="../static/img/alii.png" alt="Submit" id="ali">
-          <input class="img-thumbnail" type="image" src="../static/img/dealextreame.png" alt="Submit" id="dx">
-          <input class="img-thumbnail" type="image" src="../static/img/amazon.jpg" alt="Submit" id="amazon">
-              <input style="height: 58px; width: 58px;" class="img-thumbnail" type="image" src="../static/img/low_cost.png" alt="Submit" id="low">
-</form>
-      </center>
-      </td> -->
-      
-   <div class="panel panel-default">
+                   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -195,59 +178,42 @@ body {margin:0;}
      <a href="http://joobot-web.herokuapp.com/results/all" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>  All The Results</a>
 
  </div>
-
-      	<!-- THE OLD FILTERS BUTTONS
-            <form action=http://dinero-web.herokuapp.com/results/freeshipping ><input  type="submit" value="Free Shipping" class="btn btn-outline-success btn-block"></form>
-          <p></p>
-      <form action=http://dinero-web.herokuapp.com/results/cheap ><input  type="submit" value="Low-Cost" class="btn btn-outline-success btn-block"></form>
-          <p></p>
-      <form action=http://dinero-web.herokuapp.com/results ><input type="submit" value="All Listings" class="btn btn-outline-success btn-block"></form>
-
-        </div>
-    </div>
-  </div>
-  -->
-
-<!--
-  <form action=http://dinero-web.herokuapp.com/results/freeshipping ><input  type="submit" value="Free Shipping" class="btn btn-outline-success btn-block"></form>
-      <form action=http://dinero-web.herokuapp.com/results/cheap ><input  type="submit" value="Low-Cost" class="btn btn-outline-success btn-block"></form>
-      <form action=http://dinero-web.herokuapp.com/results ><input type="submit" value="All Listings" class="btn btn-outline-success btn-block"></form>
--->
-
-      {% for x in list %}
-
-            <tr>
-                <td><big><b> <font color="#000">{{x[0]}}</font></big></td></b>
-                <td><b>Price:</b> {{x[1]}}$</td>
-                <td><b>Shipping:</b> {{x[2]}}$</td>
-  <!--  <td><div class="img-thumbnail"><img src={{x[4]}} id="myImg" height="120" width="120"></div></td> -->
-		<!-- <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td> -->
-                <td><p>
-                <div class="img-thumbnail">
-		<a href={{x[3]}}>
-		<img border="0" alt="ItemPic" src={{x[4]}} width="120" height="120">
-		</a>
-		</div>
-		</p></td>
-<td>
-                  <div class="btn-group-justified">
-    <div class="btn-group">
-                  <form action={{x[3]}} target="_blank"><button type="submit" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Opening..."><i class="fa fa-external-link" aria-hidden="true"></i>Open in {{ x[5] }}</button>
-                </form>
-        </div>
-<div class="btn-group">
-                <form action="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><button type="submit" class="btn btn-success" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>"><i class="fa fa-thumbs-up" aria-hidden="true"></i>Like</button></form>
-          </div>
-          </div>
-            </td>
-
-            </tr>
-        {% endfor %}
-       </tbody>
-    </table>
+       </div>
+                   </div>
 
 
+               <center><div id="load"></div></center>
+<div id="contents">
 
+ {% for x in list %}
+<div class="col-sm-9 padding-right">
+					<div class="features_items"><!--features_items-->
+						<div class="col-sm-4">
+							<div class="product-image-wrapper">
+								<div class="single-products">
+										<div class="productinfo text-center">
+											<img src="{{x[4]}}" alt="" />
+											<h2>{{x[1]}}</h2>
+											<p>{{x[0]}}</p>
+											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+										</div>
+										<div class="product-overlay">
+											<div class="overlay-content">
+												<h2>{{x[1]}}</h2>
+                                                <p>{{x[0]}}</p>
+												<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
+											</div>
+										</div>
+								</div>
+								<div class="choose">
+									<ul class="nav nav-pills nav-justified">
+										<li><a href="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><i class="fa fa-thumbs-up"></i>Like</a></li>
+
+									</ul>
+								</div>
+							</div>
+						</div>
+ {% endfor %}
 
                 </div>
             </div>
@@ -451,6 +417,15 @@ span.onclick = function() {
    }, 100000);
 });
 </script>
+	    
+	      <script src="../static/js/jquery.js"></script>
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="../static/js/jquery.scrollUp.min.js"></script>
+	<script src="../static/js/price-range.js"></script>
+    <script src="../static/js/jquery.prettyPhoto.js"></script>
+    <script src="../static/js/main.js"></script>
+
+
 
 
 </body>
