--- a/templates/results.html
+++ b/templates/results.html
@@ -119,6 +119,20 @@ body {margin:0;}
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    
+		    	    <!-- SEARCH -->
+		                     <div class="col-sm-3 col-md-3">
+        <form method="post" action="/search" class="navbar-form" role="search">
+        <div class="input-group">
+            <input type="text" name="add" class="form-control" placeholder="Search">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+        </div>
+        </form>
+    </div>	    
+		    <!-- END -->
+		    
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
