--- a/templates/results.html
+++ b/templates/results.html
@@ -21,16 +21,13 @@
     <link href="../static/css/freelancer.css" rel="stylesheet">
 
     <!-- Products list -->
-        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/font-awesome.min.css" rel="stylesheet">
     <link href="../static/css/prettyPhoto.css" rel="stylesheet">
     <link href="../static/css/price-range.css" rel="stylesheet">
     <link href="../static/css/animate.css" rel="stylesheet">
-	<link href="../static/css/main.css" rel="stylesheet">
-	<link href="../static/css/responsive.css" rel="stylesheet">
-
-
-
+    <link href="../static/css/main.css" rel="stylesheet">
+    <link href="../static/css/responsive.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -47,13 +44,13 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
          <link rel="stylesheet" type="text/css" href="../static/DataTables/dataTables.bootstrap.css">
-      
+
       <style>
 body {margin:0;}
 
 .icon_bar {
 	position: fixed;
-   
+
 	bottom: 0;
 	width: 100%;
     text-align: center;
@@ -77,7 +74,7 @@ body {margin:0;}
     background-color: #58D3F7 !important;
 }
 </style>
-      
+
         <style>#results { color:black;  }
         #load{
     width:100%;
@@ -90,19 +87,18 @@ body {margin:0;}
 }
 
         </style>
-    
+
 
 </head>
 
 <body id="page-top" class="index">
-	<div class="icon_bar">
-  <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
+<div class="icon_bar">
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -116,13 +112,13 @@ body {margin:0;}
                 </button>
 
 <a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
-             <a class="navbar-brand" href="#page-top">  Shops  </a>
+            <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    
+
 		    	    <!-- SEARCH -->
 		                     <div class="col-sm-3 col-md-3">
         <form method="post" action="/search" class="navbar-form" role="search">
@@ -133,10 +129,10 @@ body {margin:0;}
             </div>
         </div>
         </form>
-    </div>	    
+    </div>
 		    <!-- END -->
-		    
-        <ul class="nav navbar-nav navbar-right">
+
+            <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -146,7 +142,7 @@ body {margin:0;}
                     <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i>  My-Space</a>
                     </li>
-                    
+
                       <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i>  My Favorites</a>
                     </li>
@@ -168,7 +164,7 @@ body {margin:0;}
         <!-- /.container-fluid -->
     </nav>
 
-      <!-- Portfolio Grid Section -->
+       <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -234,55 +230,9 @@ body {margin:0;}
             </div>
 
     </section>
-			 
 
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">/
-                    </div>
-                </div>
-            </div>
 
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+
 
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -312,7 +262,7 @@ body {margin:0;}
 $(document).ready(function() {
 
     // Setup - add a text input to each footer cell
-    $('#results thead th').each( function () {
+    $('#results tfoot th').each( function () {
         var title = $(this).text();
         $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
     } );
@@ -416,6 +366,14 @@ span.onclick = function() {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
+   <script>
+  $('#searchButton').on('click', function () {
+    var $btn = $(this).button('loading')
+    // business logic...
+    $btn.button('reset')
+  })
+</script>
+
 <!--
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" onclick="goBack()">
@@ -424,24 +382,6 @@ span.onclick = function() {
     </div>
 </div>
 -->
-<script>
-	$('.btn').on('click', function() {
-    var $this = $(this);
-  $this.button('loading');
-    setTimeout(function() {
-       $this.button('reset');
-   }, 100000);
-});
-</script>
-	    
-	      <script src="../static/js/jquery.js"></script>
-	<script src="../static/js/bootstrap.min.js"></script>
-	<script src="../static/js/jquery.scrollUp.min.js"></script>
-	<script src="../static/js/price-range.js"></script>
-    <script src="../static/js/jquery.prettyPhoto.js"></script>
-    <script src="../static/js/main.js"></script>
-
-
 
 
 </body>
