--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+ <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
     <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
@@ -24,19 +28,18 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
+        <![endif]-->
 
-    <![endif]-->
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <!-- js script for loading button -->
-   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<style>
+         <link rel="stylesheet" type="text/css" href="../static/DataTables/dataTables.bootstrap.css">
+      
+      <style>
 body {margin:0;}
-
 .icon_bar {
-	position: fixed;   
+	position: fixed;
+   
 	bottom: 0;
 	width: 100%;
     text-align: center;
@@ -44,7 +47,6 @@ body {margin:0;}
     overflow: auto;
     z-index: 99999;
 }
-
 .icon_bar a {
     width: 20%;
     float: left;
@@ -53,36 +55,15 @@ body {margin:0;}
     color: white;
     font-size: 36px;
 }
-
 .icon_bar a:hover {
     background-color: #01B5F0;
 }
-
 .active {
     background-color: #58D3F7 !important;
 }
 </style>
-    <!-- style tag for icons -->
-    <style>
-.floating-box {
-    float: left;
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    border: 1px solid #0B2161;
-    display: inline;
-}
-
-.after-box {
-    text-align: center;
-    height: 65px;
-
-
-}
-</style>
-
- <style>#results { color:black;  }
-
+      
+        <style>#results { color:black;  }
         #load{
     width:100%;
     height:100%;
@@ -92,42 +73,37 @@ body {margin:0;}
     z-index:9999;
     background:url("../static/img/flickr.gif") 50% 50% no-repeat rgb(255,255,255);
 }
-
         </style>
+    
 
 </head>
 
 <body id="page-top" class="index">
-
 <div class="icon_bar">
-  <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
-<!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
-
         <div class="container">
-
             <!-- Brand and toggle get grouped for better mobile display -->
-
             <div class="navbar-header page-scroll">
-
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-  <a class="navbar-brand" href="#page-top">  Shops  </a>
 
-
+<a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    
 		    	    <!-- SEARCH -->
@@ -142,7 +118,8 @@ body {margin:0;}
         </form>
     </div>	    
 		    <!-- END -->
-                <ul class="nav navbar-nav navbar-right">
+		    
+            <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -224,24 +201,60 @@ body {margin:0;}
 
     </section>
 
-<script>
-function goBack() {
-    window.history.back();
-}
-</script>
+    <!-- Portfolio Grid Section -->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center">
+                	 <p style="padding-top: 10px"></p>
+                    <h2>Smart Search</h2>
+                  <!--           <hr class="star-primary"> -->
+					
+<h4>Easy To Shop !</h4>
 
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <!--
-    <div class="scroll-top page-scroll visible-xs visible-sm">
-        <a class="btn btn-primary" onclick="goBack()">
-            <i class="fa fa-chevron-left"></i>
-        </a>
-    </div>
+                                   <center><div id="load"></div></center>
+<div id="contents">
+ <p style="padding-top: 20px"></p>
+<form method="post" action="/search">
+<p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Your Item"></p>
+      <!-- icons buttons:
+    <div id="icons">
+<p><input id=ebay class="floating-box img-thumbnail" type="image" src="../static/img/ebay.png" width="48" height="48"></p>
+    <p><input class="floating-box img-thumbnail" type="image" src="../static/img/alii.png"  alt="checkbox" width="48" height="48"></p>
+    <p><input class="floating-box img-thumbnail" type="image" src="../static/img/dealextreame.png"  alt="checkbox" width="48" height="48"></p>
+    <p><input class="floating-box img-thumbnail" type="image" src="../static/img/amazon.jpg"  alt="checkbox" width="48" height="48"></p>
 </div>
+ -->
+
+<!--
+<p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" id="search" autocomplete="off" data-loading-text="Loading..." value="Search Now" class="btn btn-success btn-block after-box"></p>
 -->
+    <p style="padding-top: 10px"></p>
+  <!-- <button style="width: 300px; height: 65px; display: inline-block;" type="submit" id="searchButton" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search Now</button> -->
+<!--
+<button style="width: 300px; height: 65px; display: inline-block;" type="submit" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading ...">Search Now</button>
+-->
+<center>
+<div style="text-align:center;">
+<button type="submit" style="width: 200px; height: 65px; display: inline-block;" class="btn btn-info btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>">Search Now</button>
+</div>
+</center>
+</form>
+
+
+
+
+                </div>
+            </div>
+
+    </section>
+
+
+
 
     <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="../static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
@@ -258,16 +271,40 @@ function goBack() {
 
     <!-- Custom Theme JavaScript -->
     <script src="../static/js/freelancer.js"></script>
-<script type="text/css" >#icons{border:solid 1px red;}.icon{border:solid 1px black; display:inline;}</script>
+	
 
-	 <script type="text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-                        <script>
-                        $(document).ready(function() {
-                                  $("#results").DataTable();
-                        } );
+	 <script type="../static/text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+<script type="../static/text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"
+        <script type="../static/text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.12.3.min.js"
+<script>
+$(document).ready(function() {
+    // Setup - add a text input to each footer cell
+    $('#results tfoot th').each( function () {
+        var title = $(this).text();
+        $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
+    } );
+    // DataTable
+    var table = $('#results').DataTable();
+    // Apply the search
+    table.columns().every( function () {
+        var that = this;
+        $( 'input', this.footer() ).on( 'keyup change', function () {
+            if ( that.search() !== this.value ) {
+                that
+                    .search( this.value )
+                    .draw();
+            }
+        } );
+    } );
+}
                         </script>
-
-
+<script type="text/css">
+    tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+</script>
 <script type="text/javascript">document.onreadystatechange = function () {
   var state = document.readyState
   if (state == 'interactive') {
@@ -281,27 +318,68 @@ function goBack() {
       },1000);
   }
 }</script>
-
-
+    <!-- To The Back Page -->
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
     <script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();
+});
+</script>
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    modalImg.alt = this.alt;
+    captionText.innerHTML = this.alt;
+}
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '275750752809365',
+      xfbml      : true,
+      version    : 'v2.7'
+    });
+  };
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+   <script>
   $('#searchButton').on('click', function () {
     var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
 </script>
-
-<script>
-	$('.btn').on('click', function() {
-    var $this = $(this);
-  $this.button('loading');
-    setTimeout(function() {
-       $this.button('reset');
-   }, 100000);
-});
-</script>
-
-
+<!--
+    <div class="scroll-top page-scroll visible-xs visible-sm">
+        <a class="btn btn-primary" onclick="goBack()">
+            <i class="fa fa-chevron-left"></i>
+        </a>
+    </div>
+</div>
+-->
 </body>
-
 </html>
+
