--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+ <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
     <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
@@ -25,18 +29,19 @@
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
 
-    <![endif]-->
+        <![endif]-->
+
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <!-- js script for loading button -->
-   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<style>
+         <link rel="stylesheet" type="text/css" href="../static/DataTables/dataTables.bootstrap.css">
+      
+      <style>
 body {margin:0;}
 
 .icon_bar {
-	position: fixed;   
+	position: fixed;
+   
 	bottom: 0;
 	width: 100%;
     text-align: center;
@@ -44,7 +49,6 @@ body {margin:0;}
     overflow: auto;
     z-index: 99999;
 }
-
 .icon_bar a {
     width: 20%;
     float: left;
@@ -53,7 +57,6 @@ body {margin:0;}
     color: white;
     font-size: 36px;
 }
-
 .icon_bar a:hover {
     background-color: #01B5F0;
 }
@@ -62,27 +65,8 @@ body {margin:0;}
     background-color: #58D3F7 !important;
 }
 </style>
-    <!-- style tag for icons -->
-    <style>
-.floating-box {
-    float: left;
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    border: 1px solid #0B2161;
-    display: inline;
-}
-
-.after-box {
-    text-align: center;
-    height: 65px;
-
-
-}
-</style>
-
- <style>#results { color:black;  }
-
+      
+        <style>#results { color:black;  }
         #load{
     width:100%;
     height:100%;
@@ -94,40 +78,36 @@ body {margin:0;}
 }
 
         </style>
+    
 
 </head>
 
 <body id="page-top" class="index">
-
 <div class="icon_bar">
-  <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
   <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
-<!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
-
         <div class="container">
-
             <!-- Brand and toggle get grouped for better mobile display -->
-
             <div class="navbar-header page-scroll">
-
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-  <a class="navbar-brand" href="#page-top">  Shops  </a>
 
-
+<a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    
 		    	    <!-- SEARCH -->
@@ -142,12 +122,13 @@ body {margin:0;}
         </form>
     </div>	    
 		    <!-- END -->
-                <ul class="nav navbar-nav navbar-right">
+		    
+            <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
                        <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i>  Top-Shop</a>
+                       <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i>  Top-Shop</a>
                     </li>
                     <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i>  My-Space</a>
@@ -173,7 +154,6 @@ body {margin:0;}
         </div>
         <!-- /.container-fluid -->
     </nav>
-
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
@@ -224,8 +204,6 @@ body {margin:0;}
 
     </section>
 
-		    
-		    
 
 
     <!-- jQuery -->
@@ -381,3 +359,4 @@ span.onclick = function() {
 </body>
 
 </html>
+
